# Onyx-Leopard

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml  start.py
backend/: pyproject.toml  ruff.toml
backend/src/: config.py  main.py  migrations.py  schemas.py  session_store.py
backend/src/agents/: document_processor.py  edgar_client.py  factory.py  graph_generator.py  parser.py  questionnaire.py
backend/src/routes/: company.py  documents.py  export.py  import_profile.py  monte_carlo.py  onboarding.py  profile_builder.py  scenarios.py  settings.py  simulation.py  simulation_v2.py
backend/src/simulation/: agent_memory.py  bridge.py  ceo_agent.py  conditions.py  config_loader.py  critic.py  engine.py  growth.py  heuristic_agent.py  industries.py  library_loader.py  location.py  manager.py  models.py  monte_carlo.py  monte_carlo_models.py  monte_carlo_v2.py  node_library.yaml  nodes.py  orchestrator.py  profile_builder.py  prompts.py  replay.py  restaurant.py  seed.py  seed_builder.py  shocks.py  stance.py  state.py  triggers.py  unified.py  unified_models.py  unified_v2.py
backend/src/simulation/biomath/: adoption.py  apoptosis.py  cell_cycle.py  competition.py  engine.py  fba.py  initializer.py  mapk.py  models.py  replicator.py  signals.py
backend/src/simulation/industries/: restaurant.yaml  saas_startup.yaml
backend/src/simulation/market/: colors.py  engine.py  models.py  presets.py
backend/tests/: conftest.py  test_agent_architecture.py  test_bridge.py  test_bridge_v2.py  test_conditions.py  test_config_loader.py  test_critic.py  test_determinism.py  test_growth_invariants.py  test_library_loader.py  test_location_regression.py  test_market_engine.py  test_market_heuristics.py  test_market_math.py  test_market_presets.py  test_market_routes.py  test_monte_carlo.py  test_monte_carlo_v2.py  test_node_library.py  test_orchestrator_bounds.py  test_orchestrator_heuristic.py  test_orchestrator_llm.py  test_replay.py  test_seed.py  test_seed_builder.py  test_shocks.py  test_simulation_v2_routes.py  test_stance.py  test_unified_engine.py  test_unified_v2.py
backend/tests/fixtures/location_defaults_pre_redesign/: adaptive_ai_automation_consulting_energy_sector.json  adaptive_b2b_ai_automation_consulting_oil__gas.json  adaptive_b2b_saas_business_intelligence.json  adaptive_saas_analytics_platform.json  restaurant.json  saas_startup.json
documentation/: market_engine_architecture.md  market_engine_changelog.md  market_engine_math_fixes.md  market_engine_parameters.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
references/: The_Mathematical_Economics_of_Global_Business.md  biological_mathematics__as_simulation_engine_for_business_organisms.md  competitive_market_simulation_spec.md  precursor_research.md  tehcnical_research.md
research_output/: 11-financial-risk-systemic-risk.md  (+5 more)
(+132 files in other folders)
